--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/friaf/simone-game-jest-testing#readme",
   "devDependencies": {
-    "jest": "^29.4.2"
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2"
   }
 }
